# automated-planning

exercise1/: README.txt  domain.pddl  problem.pddl  sas_plan
exercise2/: domain.pddl  problem.pddl  sas_plan.1  sas_plan.2
exercise3/: README.txt  domain.hddl  problem.hddl
exercise4/: README.txt  domain.pddl  problem.pddl
exercise5/: CMakeLists.txt  README.txt  first_terminal.sh  package.xml  second_terminal.sh  useful_commands
exercise5/launch/: commands  plansys2_exercise5_launch.py
exercise5/pddl/: domain.pddl
exercise5/src/: attach_carrier_action_node.cpp  deliver_action_node.cpp  fill_action_node.cpp  load_carrier_action_node.cpp  move_action_node.cpp  pickup_action_node.cpp
